# tests

./: .gitignore
dashboard-fricadel/: dashboard.py  generate_dataset.py  pyproject.toml
dashboard-fricadel/assets/: business_charts.css  style.css
django-angular/backend/: pyproject.toml
django-angular/backend/myproject/: db.sqlite3
django-angular/backend/myproject/myproject/: settings.py  urls.py
django-angular/backend/myproject/sample/: admin.py  models.py  serializer.py  urls.py  views.py
django-angular/backend/myproject/sample/migrations/: 0001_initial.py  0002_c_a_category.py  0003_alter_atob_options_alter_atob_order.py  0004_atob_sort_order.py  0005_status_alter_atob_options.py
django-angular/frontend/: Dockerfile  package-lock.json  package.json
py-oracle-transfer/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
py-oracle-transfer/config/: config.yaml
